--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "x0001e"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -16,3 +16,6 @@ rustc-demangle = "0.1.21"
 boolector = "0.4.3"
 #z3 = {version="0.11.2", features = ["static-link-z3"]}
 radix_trie = "0.2.1"
+
+[workspace]
+members = ["cli"]
