Refactor runner and add types to output

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -17,4 +17,5 @@ regex = "1.5.5"
 rustc_version = "0.4.0"
 rustc-demangle = "0.1.21"
 x0001e = { path = "../", version = "1.0" }
+runner = { path = "../runner", version = "1.0" }
 colored = "2.0.0"
