--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,6 @@ name = "x0001e"
 version = "1.0.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 anyhow = "1.0.53"
 thiserror = "1.0.30"
@@ -16,6 +14,11 @@ rustc-demangle = "0.1.21"
 boolector = "0.4.3"
 #z3 = {version="0.11.2", features = ["static-link-z3"]}
 radix_trie = "0.2.1"
+rand = "0.8.4"
 
 [workspace]
-members = ["cli", "runner", "valid_derive"]
+members = ["cli", "runner", "valid_derive", "x0001e_lib"]
+
+
+# [profile.release]
+# debug = true
