--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,18 @@ anyhow = "1.0.53"
 thiserror = "1.0.30"
 either = "1.6"
 llvm-ir = { version = "0.8.1", features = ["llvm-13"] }
-log = "0.4.0"
+#log = "0.4.0"
 env_logger = "0.9.0"
 rustc-demangle = "0.1.21"
-boolector = "0.4.3"
-#z3 = {version="0.11.2", features = ["static-link-z3"]}
+boolector = { version = "0.4.3", features = ["vendor-lgl"] }
+z3 = { version = "0.11.2", features = ["static-link-z3"]}
 radix_trie = "0.2.1"
 rand = "0.8.4"
+tracing = "0.1.34"
+tracing-subscriber = "0.3.11"
 
-[workspace]
-members = ["cli", "runner", "valid_derive", "x0001e_lib"]
+#[workspace]
+#members = ["cli", "runner", "valid_derive", "x0001e_lib"]
 
-# [profile.release]
-# debug = true
+[profile.release]
+debug = true
