--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ rand = "0.8.4"
 tracing = "0.1.34"
 tracing-subscriber = "0.3.11"
 
-#[workspace]
-#members = ["cli", "runner", "valid_derive", "x0001e_lib"]
+[workspace]
+members = ["cli", "runner", "valid_derive", "x0001e_lib"]
 
-[profile.release]
-debug = true
+# [profile.release]
+# debug = true
