--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,5 @@ tracing-subscriber = "0.3.11"
 [workspace]
 members = ["cli", "runner", "valid_derive", "x0001e_lib"]
 
-# [profile.release]
-# debug = true
+[profile.release]
+debug = true
