--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ tracing = "0.1.34"
 tracing-subscriber = "0.3.11"
 
 [workspace]
-members = ["cli", "runner", "valid_derive", "x0001e_lib"]
+members = ["cli", "valid_derive", "x0001e_lib"]
 
 [profile.release]
 debug = true
