--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [[bin]]
 path = "src/main.rs"
-name = "cargo-x0001e"
+name = "cargo-symex"
 
 [dependencies]
 anyhow = "1.0.65"
@@ -16,5 +16,5 @@ log = "0.4.17"
 regex = "1.6.0"
 rustc_version = "0.4.0"
 rustc-demangle = "0.1.21"
-x0001e = { path = "../", version = "1.0" }
+symex = { path = "../", version = "1.0" }
 colored = "2.0.0"
