--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,10 +11,11 @@ name = "cargo-symex"
 anyhow = "1.0.65"
 cargo-project = "0.3.0"
 clap = { version = "4.0.10", features = ["derive"] }
-env_logger = "0.9.1"
 log = "0.4.17"
 regex = "1.6.0"
 rustc_version = "0.4.0"
 rustc-demangle = "0.1.21"
 symex = { path = "../", version = "1.0" }
 colored = "2.0.0"
+tracing = "0.1"
+tracing-subscriber = "0.3"
