--- a/cargo-symex/Cargo.toml
+++ b/cargo-symex/Cargo.toml
@@ -10,7 +10,7 @@ name = "cargo-symex"
 [dependencies]
 anyhow = "1.0.65"
 cargo-project = "0.3.0"
-clap = { version = "4.0.10", features = ["derive"] }
+clap = { version = "=4.0.10", features = ["derive"] }
 log = "0.4.17"
 regex = "1.6.0"
 rustc_version = "0.4.0"
