--- a/cargo-symex/Cargo.toml
+++ b/cargo-symex/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cli"
+name = "cargo-symex"
 version = "1.0.0"
 edition = "2021"
 
@@ -15,7 +15,7 @@ log = "0.4.17"
 regex = "1.6.0"
 rustc_version = "0.4.0"
 rustc-demangle = "0.1.21"
-symex = { path = "../", version = "1.0" }
+symex = { path = "../symex", version = "*" }
 colored = "2.0.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
